# opa-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
samples/: generate_pirate_news.py
src/opa/: __init__.py  archive.py  data_assets.py  manifest.py  prompt.py  session.py  signing.py
src/opa_archive.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_archive.py  test_data_assets.py  test_manifest.py  test_prompt.py  test_session.py  test_signing.py
