[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opa-archive"
version = "0.1.0"
description = "Python library for generating OPA (Open Prompt Archive) files"
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.urls]
Homepage = "https://github.com/shannah/opa-python"

[tool.setuptools.packages.find]
where = ["src"]
